tests/baselines/reference/typeTagOnFunctionDeclaration3.errors.txt
index.js(14,12): error TS8030: The type of a function declaration must match the function's signature.


==== index.js (1 errors) ====
    export function test1() {}
    
    /** @type {{(): string;}} */
    function getter1() {
      return "";
    }
    
    Object.defineProperty(test1, "foo", {
      get: getter1,
    });
    
    export function test2() {}
    
    /** @type {{(): string; bar: number}} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8030: The type of a function declaration must match the function's signature.
    function getter2(arg1) {
      return "";
    }
    getter2.bar = 10;
    
    Object.defineProperty(test2, "foo", {
      get: getter2,
    });
    